[gd_scene load_steps=3 format=3 uid="uid://bcd4o74kqdsp3"]

[ext_resource type="Script" path="res://camera_stream_texture.gd" id="1_4gi5t"]
[ext_resource type="Script" path="res://imagem_web.gd" id="1_x2def"]

[node name="ImagemWeb" type="Node2D"]
script = ExtResource("1_x2def")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 279.0
offset_top = 91.0
offset_right = 919.0
offset_bottom = 571.0
script = ExtResource("1_4gi5t")

[node name="Label" type="Label" parent="."]
offset_left = 21.0
offset_top = 358.0
offset_right = 296.0
offset_bottom = 589.0
text = "Robot + Godot"
vertical_alignment = 2
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 4
max_lines_visible = 6

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 0.5

[node name="Button" type="Button" parent="."]
offset_left = 131.0
offset_top = 91.0
offset_right = 287.0
offset_bottom = 122.0
text = "Toggle flash"

[node name="sliderValue" type="Label" parent="."]
offset_left = 140.0
offset_top = 215.0
offset_right = 180.0
offset_bottom = 238.0
text = "sliderValue"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 133.0
offset_top = 169.0
offset_right = 340.0
offset_bottom = 185.0
max_value = 99.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
